packages/avatar/src/styles.less
@import '~@atlaskit/util-shared-styles/src/colors.less';
@import '~@atlaskit/util-shared-styles/src/grid.less';

// Size of the entire component, not including the borders
@img-size-xsmall: @ak-grid-size * 2;
@img-size-small: @ak-grid-size * 3;
@img-size-medium: @ak-grid-size * 4;
@img-size-large: @ak-grid-size * 6;
@img-size-xlarge: @ak-grid-size * 12;

// Size of the presence icon, not including the borders (note: we dont support presence for xmall)
@presence-size-xsmall: 0px; // note: we don't actually display presence for xsmall, this is just to allow us to use the mixins easily
@presence-size-small: 12px;
@presence-size-medium: 12px;
@presence-size-large: 18px;
@presence-size-xlarge: 18px;

// The color shown behind the avatar whilst it is still loading
@ak-avatar-background: @ak-color-N40;

// Default presence colors
@ak-avatar-presence-color-online: @ak-color-G300;
@ak-avatar-presence-color-busy: @ak-color-Y500;
@ak-avatar-presence-color-offline: @ak-color-N40;

// Presence icon styles
@ak-avatar-presence-border-width-xsmall: 0px;
@ak-avatar-presence-border-width-small: 2px;
@ak-avatar-presence-border-width-medium: 2px;
@ak-avatar-presence-border-width-large: 3px;
@ak-avatar-presence-border-width-xlarge: 3px;
@ak-avatar-presence-border-color: @ak-color-primary3;

// The top and left offset for where the presence icon should be positioned
@presence-offset-xsmall: @ak-avatar-presence-border-width-xsmall;
@presence-offset-small: -@ak-avatar-presence-border-width-small;
@presence-offset-medium: -@ak-avatar-presence-border-width-medium;
@presence-offset-large: -@ak-avatar-presence-border-width-large;
@presence-offset-xlarge: 6px; // xlarge presence is a snowflake with regards to presence placement

.root {
  display: inline-block;
  position: relative;
}

.xsmall {
  .sizeMixin(xsmall);
}
.small {
  .sizeMixin(small);
  .borderMixin(small);
}
.medium {
  .sizeMixin(medium);
  .borderMixin(medium);
}
.large {
  .sizeMixin(large);
  .borderMixin(large);
}
.xlarge {
  .sizeMixin(xlarge);
  .borderMixin(xlarge);
}

// Override for x-large container icon presence positioning slowflake, because x-large presence is
// shifted away from edge by default.
.xlarge > .container-avatar + .presence-wrapper {
  right: 0px;
  bottom: 0px;
}

.imgWrapper {
  align-content: center;
  align-items: middle;
  background-color: @ak-avatar-background;
  display: flex;
  height: 100%;
  overflow: hidden;
  width: 100%;
  // need to transformZ to lift it into a GPU layer so that the img
  // doesnt ignore overflow:hidden when animating the opacity
  transform: translateZ(0);

  img {
    height: 100%;
    width: 100%;
    display: none;
  }
  // Avatars will have a background color present until the image is loaded
  &.loaded {
    background-color: transparent;

    img {
      display: inline-block;
    }
  }
}

.object-avatar {
  border-radius: 100%;
}

.container-avatar {
  border-radius: 3px;
}

.presence-wrapper {
  position: absolute;
}

.presence {
  align-content: center;
  align-items: middle;
  // we repeat the border color and width here as fallback in case the user passes an invalid color
  // to borderColor, or an invalid size to size
  border: @ak-avatar-presence-border-width-medium solid @ak-avatar-presence-border-color;
  border-radius: 100%;
  box-sizing: border-box;
  display: flex;
  height: 100%;
  overflow: hidden;
  width: 100%;

  &:empty {
    display: none;
  }
}

.hidden {
  display: none;
}

.sizeMixin(@size) {
  // We build the names of the variables we will use for size and offsets
  @height: "img-size-@{size}";
  @width: "img-size-@{size}";
  @presenceSize: "presence-size-@{size}";
  @presenceOffset: "presence-offset-@{size}";

  height: @@height;
  width: @@width;

  .presence-wrapper {
    right: @@presenceOffset;
    height: @@presenceSize;
    bottom: @@presenceOffset;
    width: @@presenceSize;
  }
}

.borderMixin(@size) {
  @borderWidth: "ak-avatar-presence-border-width-@{size}";

  .presence {
    border-width: @@borderWidth;
  }
}

